增加参数自动注册