@@ -1,12 +1,12 @@
 package com.jtrace.zeus.jvm.parameters.service;
 
-import com.jtrace.zeus.jvm.parameters.rules.Parameter;
-import org.apache.commons.lang3.StringUtils;
+import com.jtrace.zeus.jvm.parameters.rules.Check;
+import com.jtrace.zeus.jvm.parameters.rules.CheckoutResult;
+import com.jtrace.zeus.jvm.parameters.rules.ParametersCollection;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
+import java.lang.reflect.Constructor;
+import java.util.*;
 
 /**
  * @author xule05
@@ -18,69 +18,44 @@ public class ParametersEvaluateService {
     /**
      * step1:参数分解与过滤
      */
-    public String splitParameters(String parameters) {
-        // String s = "java -server -Xms2g -Xmx2g -Xss1m -XX:+UseConcMarkSweepGC -XX:MaxMetaspaceSize=256M -XX:NewRatio=4 -Xloggc:/usr/local/tools/software/parameters/jvm-parameters.20200129.gc.log -XX:ErrorFile=/usr/local/tools/software/parameters/jvm-parameters.20200129.vmerr.log -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+AlwaysPreTouch -XX:CMSFullGCsBeforeCompaction=5 -XX:+UseCMSCompactAtFullCollection -XX:+PrintGCApplicationStoppedTime -XX:+PrintTenuringDistribution -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintClassHistogram -jar parameters-0.0.1-SNAPSHOT.jar";
-        // String s0="/Library/Java/JavaVirtualMachines/jdk1.8.0_171.jdk/Contents/Home/jre/bin/java -Djava.io.tmpdir=/var/folders/z3/tvwybsv11lxbj9fn4_3ktj_80000gn/T/ -Djetty.home=/usr/local/jetty-distribution-9.4.19.v20190610 -Djetty.base=/usr/local/jetty-distribution-9.4.19.v20190610 -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8084 -Xmx2000m -Xmn512m -XX:+UseConcMarkSweepGC -XX:ParallelCMSThreads=2 -XX:+CMSClassUnloadingEnabled -cp /usr/local/jetty-distribution-9.4.19.v20190610/lib/mail/javax.mail.glassfish-1.4.1.v201005082020.jar:/usr/local/jetty-distribution-9.4.19.v20190610/resources:/usr/local/jetty-distribution-9.4.19.v20190610/lib/servlet-api-3.1.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-schemas-3.1.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-http-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-server-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-xml-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-util-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-io-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-jndi-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-security-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/transactions/javax.transaction-api-1.3.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-servlet-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-webapp-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-plus-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-annotations-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/annotations/asm-7.1.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/annotations/asm-analysis-7.1.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/annotations/asm-commons-7.1.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/annotations/asm-tree-7.1.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/annotations/javax.annotation-api-1.3.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/apache-jsp/org.eclipse.jdt.ecj-3.17.0.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/apache-jsp/org.eclipse.jetty.apache-jsp-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/apache-jsp/org.mortbay.jasper.apache-el-8.5.40.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/apache-jsp/org.mortbay.jasper.apache-jsp-8.5.40.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/apache-jstl/org.apache.taglibs.taglibs-standard-impl-1.2.5.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/apache-jstl/org.apache.taglibs.taglibs-standard-spec-1.2.5.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-client-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/jetty-deploy-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/javax.websocket-api-1.0.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/javax-websocket-client-impl-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/javax-websocket-server-impl-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/websocket-api-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/websocket-client-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/websocket-common-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/websocket-server-9.4.19.v20190610.jar:/usr/local/jetty-distribution-9.4.19.v20190610/lib/websocket/websocket-servlet-9.4.19.v20190610.jar org.eclipse.jetty.xml.XmlConfiguration /var/folders/z3/tvwybsv11lxbj9fn4_3ktj_80000gn/T/start_2748467983909975633.properties /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty-bytebufferpool.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty-threadpool.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty-webapp.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty-plus.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty-annotations.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty-deploy.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/home-base-warning.xml /usr/local/jetty-distribution-9.4.19.v20190610/etc/jetty-http.xml";
-        HashSet<String> keyAndValueSet = new HashSet<>();
+    public HashMap<String, String> splitParameters(String parameters) {
         String[] array = parameters.split(" ");
-        StringBuilder stringBuilder = new StringBuilder();
-        for (String tmp : array) {
-            if (!tmp.startsWith("-") || tmp.startsWith("-D")) {
-                continue;
-            } else {
-                stringBuilder.append(tmp);
-            }
-        }
-        return stringBuilder.toString();
-    }
-
-    public HashSet<Parameter> createParameters(String parameters) {
-        String[] array = parameters.split(" ");
-        HashSet<Parameter> sets = new HashSet<>();
         HashMap<String, String> maps = new HashMap<>();
-        // 堆参数检测
-        // -XX,-X,-
         for (String tmp : array) {
             if (tmp.startsWith("-XX")) {
-                if (tmp.contains("=")) {
-                    // -XX:ParallelCMSThreads=2
-                    String[] keyAndValue = tmp.split("=");
-                    if (keyAndValue.length == 2) {
-                        String name = keyAndValue[0].substring(4);
-                        // value 有可能带有单位
-                        String value = keyAndValue[1];
-                        maps.put(name, value);
-                    }
-                } else {
-                    // -XX:+UseConcMarkSweepGC
-                    if (tmp.contains("+")) {
-                        String[] keyAndValue = tmp.split("\\+");
-                        if (keyAndValue.length == 2) {
-                            String name = keyAndValue[1];
-                            maps.put(name, "true");
-                        }
-                    } else if (tmp.contains("-")) {
-                        String[] keyAndValue = tmp.split("\\-");
-                        if (keyAndValue.length == 2) {
-                            String name = keyAndValue[1];
-                            maps.put(name, "false");
-                        }
-                    } else {
-                        System.out.println("参数不符合预期：" + tmp);
-                    }
-                }
+                parseAdvancedOptions(maps, tmp);
             } else if (tmp.startsWith("-X")) {
-                // -Xmn512m
-                // -Xmx2000m
-
-            } else if (tmp.startsWith("-")) {
-                // -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8084
-
+                parseNonStandardOptions(maps, tmp);
+            } else if (tmp.startsWith("-") & !tmp.startsWith("-D")) {
+                parseStandardOptions(maps, tmp);
             } else {
-                System.out.println("参数不符合预期：" + tmp);
+                // ignore.... 未知参数
             }
         }
-        return null;
+        return maps;
+    }
+
+    /**
+     * step2:参数检查
+     */
+    public List<CheckoutResult> checkParameters(HashMap<String, String> parametersValuesMap) {
+        List<CheckoutResult> results = new LinkedList<>();
+        Map<String, Class<? extends Check>> parametersClassMap = ParametersCollection.getMap();
+        try {
+            for (Map.Entry<String, String> entry : parametersValuesMap.entrySet()) {
+                String valueStr = entry.getValue();
+                Class<? extends Check> clazz = parametersClassMap.get(entry.getKey());
+                if (clazz != null) {
+                    Constructor<? extends Check> constructor = clazz.getConstructor(String.class);
+                    Check parameter = constructor.newInstance(valueStr);
+                    CheckoutResult checkout = parameter.checkout();
+                    results.add(checkout);
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return results;
     }
 
     /**
@@ -89,7 +64,7 @@ public class ParametersEvaluateService {
      * @param parameters 原始字符串
      * @param result
      */
-    public void createHeapParameters(String parameters, HashSet<Parameter> result) {
+    public void createHeapParameters(String parameters, HashSet<Check> result) {
         //
         if (parameters.contains("-Xmn")) {
 
@@ -101,26 +76,86 @@ public class ParametersEvaluateService {
         }
     }
 
-    public Map<String, String> parseFlags(String flags) {
-        Map<String, String> result = new HashMap<>(256);
-        String[] parameters = flags.split(" ");
-        for (String parameter : parameters) {
-            String[] strings = parameter.split(":");
-            if (strings.length == 2) {
-                if (StringUtils.isNotBlank(strings[0]) && strings[0].startsWith("-XX")) {
-                    String[] pairs = strings[1].split("=");
-                    if (pairs.length == 2) {
-                        result.put(pairs[0], pairs[1]);
-                    } else if (pairs.length == 1) {
-                        result.put(pairs[0], String.valueOf(true));
-                    }
-                } else {
-                    result.put(parameter.trim(), String.valueOf(true));
+    // -agentlib
+    private void parseStandardOptions(HashMap<String, String> maps, String tmp) {
+        if (tmp.startsWith("-verbose")) {
+            // -verbose:class  -verbose:gc  -verbose:jni
+            maps.put(tmp, "true");
+        } else if (tmp.contains(":")) {
+            String[] keyAndValue = tmp.split(":");
+            if (keyAndValue.length == 2) {
+                //  -version:release -splash:imgname -javaagent:jarpath[=options]
+                //  -agentlib:libname[=options]  -agentpath:pathname[=options]
+                String name = keyAndValue[0];
+                String value = keyAndValue[1];
+                maps.put(name, value);
+            }
+        } else {
+            // -client -jar -server
+            // -jre-restrict-search  -no-jre-restrict-search
+            maps.put(tmp, "true");
+        }
+    }
+
+    private void parseNonStandardOptions(HashMap<String, String> maps, String tmp) {
+        if (tmp.contains(":")) {
+            //    -Xbootclasspath:path -Xbootclasspath/a:path -Xbootclasspath/p:path
+            //    -Xcheck:jni  -Xloggc:filename -Xshare:mode
+            //    -XshowSettings:category -Xverify:mode
+            String[] keyAndValue = tmp.split(":");
+            if (keyAndValue.length == 2) {
+                String name = keyAndValue[0];
+                String value = keyAndValue[1];
+                maps.put(name, value);
+            }
+        } else if (tmp.contains("=")) {
+            //    -Xmaxjitcodesize=size
+            String[] keyAndValue = tmp.split("=");
+            if (keyAndValue.length == 2) {
+                String name = keyAndValue[0];
+                String value = keyAndValue[1];
+                maps.put(name, value);
+            }
+        } else if (tmp.startsWith("-Xms") || tmp.startsWith("-Xmx") || tmp.startsWith("-Xss")) {
+            String name = tmp.substring(0, 4);
+            String value = tmp.substring(4);
+            maps.put(name, value);
+        } else {
+            //  -Xbatch -Xcomp -Xdebug -Xdiag -Xfuture -Xint -Xinternalversion
+            //  -Xmixed -Xnoclassgc -Xprof -Xrs
+            String name = tmp;
+            String value = "true";
+            maps.put(name, value);
+        }
+    }
+
+    private void parseAdvancedOptions(HashMap<String, String> maps, String tmp) {
+        if (tmp.contains("=")) {
+            // -XX:ParallelCMSThreads=2
+            String[] keyAndValue = tmp.split("=");
+            if (keyAndValue.length == 2) {
+                String name = keyAndValue[0].substring(4);
+                // value 有可能带有单位
+                String value = keyAndValue[1];
+                maps.put(name, value);
+            }
+        } else {
+            // -XX:+UseConcMarkSweepGC
+            if (tmp.contains("+")) {
+                String[] keyAndValue = tmp.split("\\+");
+                if (keyAndValue.length == 2) {
+                    String name = keyAndValue[1];
+                    maps.put(name, "true");
+                }
+            } else if (tmp.contains("-")) {
+                String[] keyAndValue = tmp.split("-");
+                if (keyAndValue.length == 2) {
+                    String name = keyAndValue[1];
+                    maps.put(name, "false");
                 }
             } else {
-                result.put(parameter.trim(), String.valueOf(true));
+                // ignore.... 未知参数
             }
         }
-        return result;
     }
 }
